# LaC

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ros_entrypoint.sh
src/: lac.rviz
src/gaussian_map/: CMakeLists.txt  lac.rviz  package.xml
src/gaussian_map/launch/: lac.launch
src/gaussian_map/src/: cost_map.cpp  depth_rgb_map_node.cpp
src/vlm_pipeline/: CMakeLists.txt  package.xml
src/vlm_pipeline/prompt/: ee_system_prompt_template.txt  ee_user_prompt.txt  hd_system_prompt_template.txt  hd_user_prompt.txt
src/vlm_pipeline/scripts/: grounded_sam_node.py  hazard_detection.py
